Fix bug 1190570 no css on /thunderbird/all/

--- a/bedrock/thunderbird/templates/thunderbird/all.html
+++ b/bedrock/thunderbird/templates/thunderbird/all.html
@@ -18,7 +18,7 @@
   sky thunderbird-all-{{ channel }} {% if channel == 'alpha' %}blueprint{% endif %}
 {% endblock %}
 
-{% block site_css %}
+{% block page_css %}
   {# Share with Firefox #}
   {% stylesheet 'firefox_all' %}
 {% endblock %}
