--- a/media/css/privacy/privacy-day.less
+++ b/media/css/privacy/privacy-day.less
@@ -34,13 +34,6 @@
     padding: 0;
 }
 
-#colophon {
-    background: #dfe6eb;
-
-    .logo a {
-        .at2x('/media/img/sandstone/footer-mozilla-dark.png', 93px, 24px);
-    }
-}
 
 /* }}} */
 
@@ -51,7 +44,7 @@
 }
 
 #page-header {
-    margin-top: -44px;
+    margin-top: -37px; // this is the height of tabzilla
     background: #c33b32;
 
     .container {
