Fixed broken stuffs

--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -7,10 +7,8 @@
 {% block page_title %}{{ _('{product} — {channel} Notes ({version})')|f(product=release.product, channel=channel_name, version=release.version) }}{% endblock %}
 {% block body_id %}notes{% endblock %}
 {% block body_class %}fx-notes blank{% endblock %}
-{% block site_css %}
+{% block page_css %}
 {% stylesheet 'firefox_releasenotes' %}
-{% stylesheet 'firefox_android' %}
-{% stylesheet 'firefox_sync_anim' %}
 {% endblock %}
 {% block optimizely %}
 {% if waffle.switch('firefox-releasenotes-optimizely') %}
